--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Caleb Moore</title>
-</head>
-<body>
+    <head>    
+        <title>Caleb-Moore</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="Web.css">
+    </head>
 
-<h1>Welcome to my Webpage</h1>
+    <body>
+     <div class="topnav">
+        <a class="navbar-brand" href="#">Caleb Moore</a>
+        <a href="#">File</a>
+        <a href="https://github.com/Warghost13?tab=repositories">Github</a>
+        <a href="#">Link</a>
+        <a href="#" style="float:right">Link</a>
+      </div>
 
+      <h1>Welcome to my webpage</h1>
 
-</body>
-</html>
+    </body>
+    
