--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Caleb-Moore</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Web.css">
+        <link rel="stylesheet" href="css.css">
     </head>
 
     <body>
