--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css.css">
     </head>
+   
+    <style>
+    /* The navbar container */
+.topnav {
+    overflow: hidden;
+    background-color: #00DBDE;
+    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+  }
+  
+  /* Navbar links */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Links - change color on hover */
+  .topnav a:hover {
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);    
+    color: white;
+  }
 
+  /* Body background color */
+  body{
+    background-color: #74EBD5;
+    background-image: linear-gradient(90deg, #74EBD5 10%, #9FACE6 50%);
+    
+  }
+    </style>
     <body>
      <div class="topnav">
         <a class="navbar-brand" href="#">Caleb Moore</a>
