--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
      <div class="topnav">
         <a class="navbar-brand" href="#">Caleb Moore</a>
-        <a href="#">File</a>
+        <a href="#">Documents</a>
         <a href="https://github.com/Warghost13?tab=repositories">Github</a>
-        <a href="#">Link</a>
+        <a href="Resume.html">Resume</a>
         <a href="#" style="float:right">Link</a>
       </div>
 
