--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
      <div class="topnav">
         <a class="navbar-brand" href="#">Caleb Moore</a>
-        <a href="#">Documents</a>
+        <a href="Documents.html">Documents</a>
         <a href="https://github.com/Warghost13?tab=repositories">Github</a>
         <a href="Resume.html">Resume</a>
         <a href="#" style="float:right">Link</a>
