--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
             <div class="topnav" >
                 <a href="#">PORTFOLIO</a>
-                <a href="https://github.com/Warghost13?tab=repositories">GITHUB</a>
+                <a href="https://github.com/Moore-Caleb?tab=repositories">GITHUB</a>
                 <a href="#">PROJECTS</a>
               </div>
             
